--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -64,7 +64,27 @@
 
 <script type="text/javascript">
 	// your solution here
-
+ //Clicking on purple bubble pops all purple bubbles
+$('.bg-purple').on('click',() => {
+  $('.bg-purple').hide();
+});
+  //clicking on green bubble pops all green and blue bubbles
+$('.bg-green').on('click',() => {
+  $('.bg-green').hide();
+  $('.bg-blue').hide();
+});
+  // clicking on orange bordered pops all other orange bordered bubbles
+$('.bg-orange.p2-border').click(function(){
+  $('.bg-orange.p2-border').not(this).hide();
+});
+// hovering over the gradient hides the gradient
+$('#gradient-circle').mouseover(function(){
+  $('#gradient-circle').hide();
+});
+// reset button
+$('.btn').click(function(){
+  $('div:hidden').show();
+});
 </script>
 </body>
 </html>
