--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -21,7 +21,7 @@
 				<h3>Task 1b</h3>
 			</div>
 			<div class="col-6">
-				<button class="btn btn-light float-right">
+				<button class="btn btn-light float-right" onclick="stopAppend();">
 					Stop
 				</button>
 			</div>
@@ -41,6 +41,15 @@
 <script type="text/javascript">
 
 	// your solution here
+var appendTimer = setInterval(appendCircle, 1000);
+  
+function appendCircle(){
+  $('.shape-container').append($('<div class="p2-circle bg-blue"></div>'));
+}
+  
+function stopAppend(){
+  clearInterval(appendTimer);
+}
 
 </script>
 </body>
